коммит перед сном