@@ -9,7 +9,7 @@ import org.junit.jupiter.api.Test;
 public class UnitOfMeasureCommandToUnitOfMeasureTest {
 
     public static final String DESCRIPTION = "description";
-    public static final Long LONG_VALUE = new Long(1L);
+    public static final Long LONG_VALUE = Long.valueOf(1L);
 
     UnitOfMeasureCommandToUnitOfMeasure converter;
 
